--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~11.2.14",
     "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^4.1.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
