--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
     "jwt-decode": "^3.1.2",
+    "ngx-spinner": "^11.0.1",
     "rxjs": "~6.6.0",
     "socket.io-client": "^4.1.2",
     "tslib": "^2.0.0",
